--- a/ATWeb/package.json
+++ b/ATWeb/package.json
@@ -11,6 +11,7 @@
     "email": "prodev9999@gmail.com"
   },
   "dependencies": {
+    "bluebird": "^3.5.3",
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.0",
     "debug": "^2.2.0",
@@ -18,7 +19,8 @@
     "express": "^4.14.0",
     "morgan": "^1.7.0",
     "pug": "^2.0.0-beta6",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "tedious": "^5.0.3"
   },
   "engines": {
     "node": "~6.10.x"
