--- a/ATWeb/.env
+++ b/ATWeb/.env
@@ -1,3 +1,8 @@
 VERSION=v1
 API_BASE_URL=/api/
 PORT=8888
+MSSQL_SERVER=localhost
+MSSQL_INSTANCE=DEVNAMEDINSTANCE
+MSSQL_USERNAME=dev
+MSSQL_PASSWORD=dev
+MSSQL_DATABASE=AstirTrotterDB
