--- a/ATWeb/package.json
+++ b/ATWeb/package.json
@@ -17,8 +17,10 @@
     "debug": "^2.2.0",
     "dotenv": "^6.2.0",
     "express": "^4.14.0",
+    "fs": "0.0.1-security",
     "morgan": "^1.7.0",
     "pug": "^2.0.0-beta6",
+    "sequelize": "^5.1.0",
     "serve-favicon": "^2.3.0",
     "tedious": "^5.0.3"
   },
