--- a/ATWeb/.env
+++ b/ATWeb/.env
@@ -7,3 +7,4 @@ MSSQL_INSTANCE=DEVNAMEDINSTANCE
 MSSQL_USERNAME=dev
 MSSQL_PASSWORD=dev
 MSSQL_DATABASE=AstirTrotterDB
+DATABASE_RECONSTRUCT_FORCE=true
