Minor project environment update

--- a/ATWeb/package.json
+++ b/ATWeb/package.json
@@ -3,7 +3,7 @@
   "version": "0.3.0",
   "private": true,
   "scripts": {
-    "start": "node app"
+    "start": "node ./bin/www"
   },
   "description": "ATWeb",
   "author": {
