--- a/ATWeb/package.json
+++ b/ATWeb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atweb",
-  "version": "0.3.0",
+  "version": "v0.3.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
