--- a/ATWeb/package.json
+++ b/ATWeb/package.json
@@ -24,6 +24,7 @@
     "request-ip": "^2.1.3",
     "sequelize": "^5.1.0",
     "serve-favicon": "^2.3.0",
+    "sha256": "^0.2.0",
     "tedious": "^5.0.3"
   },
   "engines": {
