--- a/ATWeb/.env
+++ b/ATWeb/.env
@@ -3,8 +3,8 @@ API_BASE_URL=/api/
 API_VERSION=v1
 PORT=8888
 MSSQL_SERVER=localhost
-MSSQL_INSTANCE=DEVNAMEDINSTANCE
-MSSQL_USERNAME=dev
-MSSQL_PASSWORD=dev
+MSSQL_INSTANCE=MSSQLSERVER
+MSSQL_USERNAME=sa
+MSSQL_PASSWORD=sa
 MSSQL_DATABASE=AstirTrotterDB
 DATABASE_RECONSTRUCT_FORCE=true
