--- a/ATDesktopWin/ATDesktopWin.csproj
+++ b/ATDesktopWin/ATDesktopWin.csproj
@@ -64,6 +64,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\SignupView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\SignupView.Designer.cs">
+      <DependentUpon>SignupView.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Views\LoginView.resx">
       <DependentUpon>LoginView.cs</DependentUpon>
     </EmbeddedResource>
@@ -76,6 +82,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Views\SignupView.resx">
+      <DependentUpon>SignupView.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
