--- a/ATWeb/package.json
+++ b/ATWeb/package.json
@@ -25,7 +25,8 @@
     "sequelize": "^5.1.0",
     "serve-favicon": "^2.3.0",
     "sha256": "^0.2.0",
-    "tedious": "^5.0.3"
+    "tedious": "^5.0.3",
+    "uuid": "^3.3.2"
   },
   "engines": {
     "node": "~6.10.x"
