Added family model

--- a/ATCommon/ATCommon.csproj
+++ b/ATCommon/ATCommon.csproj
@@ -46,9 +46,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API\ClientManager.cs" />
+    <Compile Include="API\ClientManager_users_info.cs" />
+    <Compile Include="API\ClientManager_users_family.cs" />
     <Compile Include="API\ClientManager_config_seed.cs" />
     <Compile Include="API\ClientManager_auth_signup.cs" />
     <Compile Include="API\ClientManager_auth_login.cs" />
+    <Compile Include="Models\Family.cs" />
     <Compile Include="Models\_Gender.cs" />
     <Compile Include="Models\_Nationality.cs" />
     <Compile Include="Models\_OriginClass.cs" />
@@ -57,6 +60,8 @@
     <Compile Include="Models\_Party.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Responses\FamilyResponse.cs" />
+    <Compile Include="Responses\UserResponse.cs" />
     <Compile Include="Responses\SeedResponse.cs" />
     <Compile Include="Responses\SignupResponse.cs" />
     <Compile Include="Responses\LoginResponse.cs" />
