--- a/ATWeb/.env
+++ b/ATWeb/.env
@@ -1,4 +1,4 @@
-ENV=development
+STAGE=dev
 API_BASE_URL=/api/
 API_VERSION=v1
 PORT=8888
@@ -8,3 +8,6 @@ MSSQL_USERNAME=sa
 MSSQL_PASSWORD=sa
 MSSQL_DATABASE=AstirTrotterDB
 DATABASE_RECONSTRUCT_FORCE=true
+TOKEN_EXPIRES_IN=3d
+TOKEN_SIGN_SECURITY=astir-trotter-signature
+TOKEN_PREFIX=Bearer
