--- a/ATWeb/package.json
+++ b/ATWeb/package.json
@@ -19,6 +19,7 @@
     "express": "^4.14.0",
     "fs": "0.0.1-security",
     "geoip-lite": "^1.3.6",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.7.0",
     "pug": "^2.0.0-beta6",
     "request-ip": "^2.1.3",
