--- a/ATWeb/package.json
+++ b/ATWeb/package.json
@@ -21,6 +21,7 @@
     "geoip-lite": "^1.3.6",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.7.0",
+    "multer": "^1.4.1",
     "pug": "^2.0.0-beta6",
     "request-ip": "^2.1.3",
     "sequelize": "^5.1.0",
