Installed cloudinary npm

--- a/ATWeb/package.json
+++ b/ATWeb/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bluebird": "^3.5.3",
     "body-parser": "^1.15.0",
+    "cloudinary": "^1.13.2",
     "cookie-parser": "^1.4.0",
     "debug": "^2.2.0",
     "dotenv": "^6.2.0",
