--- a/ATWeb/.env
+++ b/ATWeb/.env
@@ -11,3 +11,6 @@ DATABASE_RECONSTRUCT_FORCE=true
 TOKEN_EXPIRES_IN=3d
 TOKEN_SIGN_SECURITY=astir-trotter-signature
 TOKEN_PREFIX=Bearer
+CLOUDINARY_CLOUDNAME=prodev9999
+CLOUDINARY_KEY=124267265754887
+CLOUDINARY_SECRET=O0yRVAI7C_zvHDZYT6bBVD4IDOY
