--- a/ATWeb/.env
+++ b/ATWeb/.env
@@ -11,6 +11,8 @@ DATABASE_RECONSTRUCT_FORCE=true
 TOKEN_EXPIRES_IN=3d
 TOKEN_SIGN_SECURITY=astir-trotter-signature
 TOKEN_PREFIX=Bearer
+MULTER_UPLOAD_PATH=./uploads
 CLOUDINARY_CLOUDNAME=prodev9999
 CLOUDINARY_KEY=124267265754887
 CLOUDINARY_SECRET=O0yRVAI7C_zvHDZYT6bBVD4IDOY
+CLOUDINARY_PROFILE_PATH=AstirTrotter/Profile
