Created Dashboard page controller

--- a/ATDesktopWin/ATDesktopWin.csproj
+++ b/ATDesktopWin/ATDesktopWin.csproj
@@ -67,6 +67,8 @@
   <ItemGroup>
     <Compile Include="AppManager.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PageControllers\DashboardPageController.cs" />
+    <Compile Include="Controllers\PageControllers\_PageController.cs" />
     <Compile Include="Controllers\SplashController.cs" />
     <Compile Include="Controllers\SignupController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
