--- a/.gitignore
+++ b/.gitignore
@@ -206,7 +206,7 @@ Generated_Code/
 # to a newer Visual Studio version. Backup files are not needed,
 # because we have git ;-)
 _UpgradeReport_Files/
-Backup*/
+*Backup*/
 UpgradeLog*.XML
 UpgradeLog*.htm
 
@@ -260,6 +260,5 @@ paket-files/
 __pycache__/
 *.pyc
 
-# Backup
-[Bb]ackup/
-MigrationBackup/
+# Project test files
+AtWeb/uploads/
